feat: enhance UI of various components with improved layouts, styles, and animations

--- a/src/app/layout/loadings/loading/loading.component.scss
+++ b/src/app/layout/loadings/loading/loading.component.scss
@@ -16,13 +16,13 @@
   width: 300px;
   height: 300px;
   border-radius: 50%;
-  background: linear-gradient(135deg, #00a19c, #006149, #00532a, #007143, #04aa6d);
+  background: linear-gradient(135deg, #2275d3, #0a93c5, #0859b6, #004aba, #04aa6d);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 20px;
-  box-shadow: 0 0 30px rgba(4, 170, 109, 0.6);
+  box-shadow: 0 0 30px rgba(4, 131, 170, 0.6);
   position: relative;
   padding: 20px;
   text-align: center;
